syntax = "proto3";
package models;
import "models/ads.proto";

enum JobOfferStatusEnum {
    PENDING = 0;
    APPROVED = 1;
    REJECTED = 2;
  }

message JobOfferStatus {
  string status_id = 1;
  string created_at = 2;
  string worker_id = 3;
  string offer_id = 4;
  JobOfferStatusEnum status = 5;
  models.Ad offer = 6;

}
